@@ -49,16 +49,16 @@ public abstract class RMIClassLoaderSpi
   {
   }
 
-  public abstract Class loadClass (String codeBase, String name,
-                                   ClassLoader defaultLoader)
+  public abstract Class<?> loadClass (String codeBase, String name,
+                                      ClassLoader defaultLoader)
     throws MalformedURLException, ClassNotFoundException;
 
-  public abstract Class loadProxyClass (String codeBase, String[] interfaces,
-                                        ClassLoader defaultLoader)
+  public abstract Class<?> loadProxyClass (String codeBase, String[] interfaces,
+                                           ClassLoader defaultLoader)
     throws MalformedURLException, ClassNotFoundException;
 
   public abstract ClassLoader getClassLoader (String codebase)
     throws MalformedURLException;
 
-  public abstract String getClassAnnotation (Class cl);
+  public abstract String getClassAnnotation (Class<?> cl);
 }
